--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    dependencies {
+        classpath "com.android.tools.build:gradle:3.1.3"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.51"
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.1.3' apply false
     id 'com.android.library' version '7.1.3' apply false
