--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-parcelize'
+    id 'kotlin-kapt'
 }
-
-apply plugin: 'kotlin-kapt'
 
 android {
     compileSdk 32
@@ -52,6 +52,10 @@ dependencies {
 
     //viewModelScope
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+
+    //pagination
+    implementation "androidx.paging:paging-runtime-ktx:3.0.0-beta03"
+
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
