--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'androidx.navigation.safeargs'
 }
 
 apply plugin: 'kotlin-kapt'
@@ -40,6 +41,9 @@ android {
 }
 
 dependencies {
+    // Paging 3
+    implementation("androidx.paging:paging-runtime:3.1.1")
+
     //Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:2.5.1"
     implementation "androidx.navigation:navigation-ui-ktx:2.5.1"
