--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:3.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.51"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.1"
     }
 }
 
