--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'androidx.navigation.safeargs'
+    id 'kotlin-kapt'
+    id("dagger.hilt.android.plugin")
 }
 
 apply plugin: 'kotlin-kapt'
@@ -41,6 +43,7 @@ android {
 }
 
 dependencies {
+
     // Paging 3
     implementation("androidx.paging:paging-runtime:3.1.1")
 
@@ -54,11 +57,24 @@ dependencies {
     // Retrofit with Moshi Converter
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
 
-    //viewModelScope
+    // viewModelScope
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 
-    //glide
+    // glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    // Dagger Core
+    implementation "com.google.dagger:dagger:2.37"
+    kapt "com.google.dagger:dagger-compiler:2.37"
+
+    // Dagger Android
+    api 'com.google.dagger:dagger-android:2.37'
+    api 'com.google.dagger:dagger-android-support:2.37'
+    kapt 'com.google.dagger:dagger-android-processor:2.37'
+
+    // Dagger - Hilt
+    implementation "com.google.dagger:hilt-android:2.37"
+    kapt "com.google.dagger:hilt-android-compiler:2.37"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
